--- a/tasks/typescript/pullrequest.yaml
+++ b/tasks/typescript/pullrequest.yaml
@@ -81,6 +81,32 @@ spec:
               -Dsonar.scm.revision=$PR_HEAD_SHA \
               -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
               -Dsonar.javascript.node.maxspace=8192
+        - image: aquasec/trivy:latest
+          name: vulnscan
+          resources: {}
+          script: |
+            # Scan all for reporting in pipeline
+            trivy fs . --scanners vuln --include-dev-deps --format json --db-repository public.ecr.aws/aquasecurity/trivy-db:2 --output /workspace/source/scanresults.json
+            - image: ghcr.io/jenkins-x/jx-boot:3.10.124
+              name: comment-pr
+              resources: {}
+              script: |
+                #!/usr/bin/env sh
+                source .jx/variables.sh
+                apk add jq
+                SUMMARY=$(jq -r '.Results[]?.Vulnerabilities[]? | "ID: \(.VulnerabilityID), Severity: \(.Severity), Package: \(.PkgName). Installed: \(.InstalledVersion), Fixed: [\(.FixedVersion)]"' /workspace/source/scanresults.json)
+                if jq -e '.Results[]?.Vulnerabilities[]? | select(.Severity == "HIGH" or .Severity == "CRITICAL")' /workspace/source/scanresults.json > /dev/null; then
+                  echo "Vulnerabilities of level HIGH or CRITICAL found."
+                  jx gitops pr comment -c ":bangbang: **High or critical vulnerabilities were found** :bangbang: <br><br>$SUMMARY <br><br>Pipeline stopped until dependencies are upgraded."
+                  exit 1
+                elif [ -n "$SUMMARY" ]; then
+                  echo "No vulnerabilities of level HIGH or CRITICAL found, but other vulnerabilities exist."
+                  jx gitops pr comment -c "No critical or high vulnerabilities found. <br><br>$SUMMARY <br><br>Please consider upgrading dependencies."
+                  exit 0
+                else
+                  echo "No vulnerabilities found."
+                  exit 0
+                fi                          
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
