--- a/tasks/javascript/pullrequest.yaml
+++ b/tasks/javascript/pullrequest.yaml
@@ -51,6 +51,65 @@ spec:
           script: |
             #!/bin/sh
             CI=true DISPLAY=:99 npm test
+        - image: sonarsource/sonar-scanner-cli:11.0
+          name: sonar-code-analisys
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            sonar-scanner \
+              -Dsonar.projectName=$APP_NAME \
+              -Dsonar.token=$SONAR_TOKEN \
+              -Dsonar.host.url=$SONAR_URL \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.branch.name=$PULL_BASE_REF \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.maven.scanAll=true \
+              -Dsonar.javascript.node.maxspace=8192
+        - image: sonarsource/sonar-scanner-cli:11.0
+          name: sonar-code-analisys-pr
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            sonar-scanner \
+              -Dsonar.projectName=$APP_NAME \
+              -Dsonar.token=$SONAR_TOKEN \
+              -Dsonar.host.url=$SONAR_URL \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.pullrequest.key=$PULL_NUMBER \
+              -Dsonar.pullrequest.branch=$PR_HEAD_REF \
+              -Dsonar.pullrequest.base=$PULL_BASE_REF \
+              -Dsonar.scm.revision=$PR_HEAD_SHA \
+              -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
+              -Dsonar.javascript.node.maxspace=8192
+        - image: aquasec/trivy:latest
+          name: vulnscan
+          resources: {}
+          script: |
+            # Scan all for reporting in pipeline
+            trivy fs . --scanners vuln --include-dev-deps --format json --db-repository public.ecr.aws/aquasecurity/trivy-db:2 --output /workspace/source/scanresults.json
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.124
+          name: comment-pr
+          resources: {}
+          script: |
+            #!/usr/bin/env sh
+            source .jx/variables.sh
+            apk add jq
+            SUMMARY=$(jq -r '.Results[]?.Vulnerabilities[]? | "ID: \(.VulnerabilityID), Severity: \(.Severity), Package: \(.PkgName). Installed: \(.InstalledVersion), Fixed: [\(.FixedVersion)]"' /workspace/source/scanresults.json)
+            if jq -e '.Results[]?.Vulnerabilities[]? | select(.Severity == "HIGH" or .Severity == "CRITICAL")' /workspace/source/scanresults.json > /dev/null; then
+              echo "Vulnerabilities of level HIGH or CRITICAL found."
+              jx gitops pr comment -c ":bangbang: **High or critical vulnerabilities were found** :bangbang: <br><br>$SUMMARY <br><br>Pipeline stopped until dependencies are upgraded."
+              exit 1
+            elif [ -n "$SUMMARY" ]; then
+              echo "No vulnerabilities of level HIGH or CRITICAL found, but other vulnerabilities exist."
+              jx gitops pr comment -c "No critical or high vulnerabilities found. <br><br>$SUMMARY <br><br>Please consider upgrading dependencies."
+              exit 0
+            else
+              echo "No vulnerabilities found."
+              exit 0
+            fi            
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
